H3CIPMSJAVA-20180830/src/objects/Survey_Questions__c.object
<CustomObject>
    <fields>
        <fullName>AnswerSelection_En__c</fullName>
        <label>AnswerSelection English</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnswerSelection__c</fullName>
        <label>AnswerSelection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnswerSelections_En__c</fullName>
        <label>AnswerSelections English</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AnswerSelections__c</fullName>
        <label>AnswerSelections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Multiselect</fullName>
                </value>
                <value>
                    <fullName>Checkboxes</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>MarkRadio</fullName>
                </value>
                <value>
                    <fullName>MarkRadioNaN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depend_En__c</fullName>
        <label>Depend English</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depend__c</fullName>
        <inlineHelpText>Condition for this question. Sample &quot; 3:&apos;Y&apos; &quot; means, the answer for 3 is Y . 3 means the question number in the same type.</inlineHelpText>
        <label>Depend</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_default_value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If default value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Type__c</fullName>
        <label>Query Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PQR</fullName>
                </value>
                <value>
                    <fullName>Outage PQR</fullName>
                </value>
                <value>
                    <fullName>Install PQR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Install PQR_Phase_I</fullName>
                </value>
                <value>
                    <fullName>Outage PQR_Phase_I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_En__c</fullName>
        <label>Questions English</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <description>For Query questions</description>
        <label>Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Survey Questions</label>
    <nameField>
        <displayFormat>SQ-{000000}</displayFormat>
        <label>Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>